<resources>
    <string name="app_name">Product Search</string>
    <string name="keyword">Keyword</string>
    <string name="keywordlabel">Enter Keyword</string>
    <string name="error">Please enter mandatory field</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="new_check">New</string>
    <string name="used_check">Used</string>
    <string name="unspecified_check">Unspecified</string>
    <string name="shipping">Shipping Options</string>
    <string name="pickup">Local Pickup</string>
    <string name="free">Free Shipping</string>
    <string name="nearby">Enable Nearby Search</string>
    <string name="distance">Miles from</string>
    <string name="from">From</string>
    <string name="current_location">Current Location</string>
    <string name="zipcode">zipcode</string>
    <string name="search">SEARCH</string>
    <string name="clear">CLEAR</string>
    <string name="cat_def">ALL</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string-array name="CategoryItem">
        <item>All</item>
        <item> Art </item>
        <item> Baby </item>
        <item> Books </item>
        <item> Clothing, Shoes &amp; Accessories </item>
        <item> Computers. Tablets &amp; Networking </item>
        <item> Health &amp; Beauty </item>
        <item> Music </item>
        <item> Video Games &amp; Consoles </item>

    </string-array>

    <string name="title_activity_details_bar">detailsBar</string>
    <string name="highlights">Highlights</string>
    <string name="subtitle">Subtitle</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="specifications">Specifications</string>


    <string name="sold">Sold By</string>
    <string name="storeName">Store Name</string>
    <string name="feedbackscore">Feedback Store</string>
    <string name="popularity"> Popularity</string>
    <string name="feedbackstar">Feedback Star</string>

    <string name="shippingInfo"> Shipping Info</string>

    <string name="shippingcost"> Shipping Cost</string>
    <string name="global"> Global Shipping</string>
    <string name="handling"> Handling Time</string>
    <string name="conidtion">Conidtion</string>

    <string name="returnPolicy">Return Policy</string>
    <string name="policy">Policy</string>
    <string name="returnWithin">Return within</string>
    <string name="refund">Refund Mode</string>
    <string name="shippingBy">Shipped by</string>

    <string-array name="similar_item">
        <item>Default</item>
        <item> Name </item>
        <item> Price </item>
        <item> Days </item>
    </string-array>

    <string-array name="similar_ascending">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>


    <string name="noresult">No Result</string>
    <string name="nowish">No Wishes</string>
    <string name="wishList_total">Wishlist total</string>


    <string name="search_products">Searching Products...</string>



</resources>
