<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_height="wrap_content" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="0dp">

            <TextView
                android:id="@+id/keywordlabel"
                android:layout_width="62dp"
                android:layout_height="20dp"
                android:text="@string/keyword" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp">

            <EditText
                android:id="@+id/keyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/keywordlabel"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/errormessage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textColor="#ff0000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/categorylabel"
                android:layout_width="71dp"
                android:layout_height="20dp"
                android:text="@string/category" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp">

            <Spinner
                android:id="@+id/category"
                android:layout_width="344dp"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/conditionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/new_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/new_check" />

            <CheckBox
                android:id="@+id/used"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/used_check" />

            <CheckBox
                android:id="@+id/unspecified"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unspecified_check" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/shippingoptionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <CheckBox
                android:id="@+id/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/pickup" />

            <CheckBox
                android:id="@+id/freeshipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/nearbysearchlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearby" />

            <CheckBox
                android:id="@+id/nearbysearch"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_to_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <EditText
                android:id="@+id/milesfrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distance"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/myRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/currentlocationradio"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"

                        android:text="@string/current_location" />

                    <RadioButton
                        android:id="@+id/zipcoderadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Other:" />

                </RadioGroup>

            </LinearLayout>

            <AutoCompleteTextView
                android:id="@+id/zipcode"
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/zipcode"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/errormessage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/searchbtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@color/btncolor"
                android:baselineAligned="false"
                android:onClick="mainSearch"
                android:text="@string/search"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/clearbtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/btncolor"
                android:onClick="clearSearch"
                android:text="@string/clear"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>


