<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/soldBy"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/truck"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sold"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="35dp"
                >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        >

                        <TextView
                            android:text="@string/storeName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_column="1"
                            />

                        <TextView
                            android:text="hswudhwi"
                            android:layout_marginLeft="50dp"
                            android:id="@+id/shipping_storeName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="gotoStore"
                            android:textColor="@color/storeColor" />

                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        >

                        <TextView
                            android:text="@string/feedbackscore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_column="1"
                            />

                        <TextView
                            android:text="hswudhwi"
                            android:layout_marginLeft="50dp"
                            android:id="@+id/shipping_feedbackscore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             />

                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        >


                        <TextView
                            android:text="@string/popularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_column="1"
                            />

                        <com.wssholmes.stark.circular_score.CircularScoreView
                            android:id="@+id/shipping_popularity"
                            android:layout_gravity="left"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="50dp"
                            app:score="70"
                            app:setBackgroundColor="@color/white"
                            app:setPrimaryColor="@color/btncolor"
                            app:setTextColor="@color/black"
                            app:setSecondaryColor="@color/black"
                            />


                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        >

                        <TextView
                            android:text="@string/feedbackstar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_column="1"
                            />

                        <ImageView
                            android:layout_width="44dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_gravity="left"
                            android:id="@+id/shipping_star" />

                    </TableRow>


                </TableLayout>



            </LinearLayout>


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ferry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/shippingInfo"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:id="@+id/shipping_cost_txt"
                            android:text="@string/shippingcost"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/shipping_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:text="hswudhwi" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/globalRow">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/global"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/shipping_global"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:text="hswudhwi"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/handlingRow">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/handling"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/shipping_handling"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:text="hswudhwi" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/conditionRow">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/condition"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/shipping_condition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:text="hswudhwi" />

                    </TableRow>


                </TableLayout>


            </LinearLayout>


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="80dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dump_truck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/returnPolicy"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/policyRow">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/policy"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/return_policy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:text="hswudhwi"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/return_withinRow">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/returnWithin"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/return_within"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:text="hswudhwi" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/refundRow">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/refund"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/return_refund"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:text="hswudhwi" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/shippingByRow" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/shippingBy"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/return_shippingby"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:text="hswudhwi" />

                    </TableRow>


                </TableLayout>


            </LinearLayout>


        </LinearLayout>



    </LinearLayout>



</ScrollView>






